--- a/Análisis_numérico_introducción,_ejemplo1_.ipynb
+++ b/Análisis_numérico_introducción,_ejemplo1_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Análisis numérico- introducción, ejemplo1   .ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSDddfpVG/a37M10FvNUfd",
+      "authorship_tag": "ABX9TyN4KfTY+BQjytwGQWLjuAMO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,62 +25,67 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "aNU7oZocG7oq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "o5MQ-v5--oeE"
       },
       "source": [
-        "import matplotlib.pyplot as plt\n"
+        "**Ejercicio - introduccion a python**`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aNU7oZocG7oq"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "#En este primer paso se llama a la librería que permite graficar "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fEUsi6caHEY7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fEUsi6caHEY7"
       },
       "source": [
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "#mediante este comando las gráficas se imprimen alineadas"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PRYoK4CiHEuV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PRYoK4CiHEuV"
       },
       "source": [
-        "import numpy as np\n",
+        "#Para graficar una funcion senoidal se define los valores de x, y \n",
+        "import numpy as np \n",
         "\n",
         "x = np.arange(0, 9 * np.pi, 0.2)\n",
         "y = np.sin(x)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9CEOi8n6Hbpo",
-        "colab_type": "code",
+        "outputId": "d7f3bf5a-d7e4-4ff4-e2de-79e7e4d2738f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "d7f3bf5a-d7e4-4ff4-e2de-79e7e4d2738f"
+        }
       },
       "source": [
-        "plt.plot(x, y)"
+        "plt.plot(x, y) #Se grafica x VS y "
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
